ppcg_src/pet/include/pet.h

/* If autodetect is set, any valid scop is extracted.
 * Otherwise, the scop needs to be delimited by pragmas.
 */
int pet_options_set_autodetect(isl_ctx *ctx, int val);
/* If encapsulate-dynamic-control is set, then any dynamic control
 * in the input program will be encapsulated in macro statements.
 * This means in particular that no statements with arguments
 * will be created.
 */
int pet_options_set_encapsulate_dynamic_control(isl_ctx *ctx, int val);
int pet_options_set_signed_overflow(isl_ctx *ctx, int val);
/* "loc" represents the region of the source code that is represented
 * by this scop.
 * If the scop was detected based on scop and endscop pragmas, then
 * the lines containing these pragmas are included in this region.
 * In the final result, the context describes the set of parameter values
 * for which the scop can be executed.
 * During the construction of the pet_scop, the context lives in a set space
 * where each dimension refers to an outer loop.
 * context_value describes assignments to the parameters (if any)
 * outside of the scop.
 *
 * "schedule" is the schedule of the statements in the scop.
 *
 * The n_type types define types that may be referenced from by the arrays.
 *
 * The n_implication implications describe implications on boolean filters.
 *
 * The n_independence independences describe independences implied
 * by for loops that are marked independent in the source code.
 */
struct pet_scop {
	pet_loc *loc;

	isl_set *context;
	isl_set *context_value;
	isl_schedule *schedule;

	int n_type;
	struct pet_type **types;

	int n_array;
	struct pet_array **arrays;

	int n_stmt;
	struct pet_stmt **stmts;

	int n_implication;
	struct pet_implication **implications;

	int n_independence;
	struct pet_independence **independences;
};
typedef struct pet_scop pet_scop;
/* Extract a pet_scop from a C source file.
 * If function is not NULL, then the pet_scop is extracted from
 * a function with that name.
 */
__isl_give pet_scop *pet_scop_extract_from_C_source(isl_ctx *ctx,
	const char *filename, const char *function);
__isl_null pet_scop *pet_scop_free(__isl_take pet_scop *scop);
/* Return the context of "scop". */
__isl_give isl_set *pet_scop_get_context(__isl_keep pet_scop *scop);
/* Return the schedule of "scop". */
__isl_give isl_schedule *pet_scop_get_schedule(__isl_keep pet_scop *scop);
/* Return the set of all statement instances. */
__isl_give isl_union_set *pet_scop_get_instance_set(__isl_keep pet_scop *scop);
/* Return the potential read access relation. */
__isl_give isl_union_map *pet_scop_get_may_reads(__isl_keep pet_scop *scop);
/* Return the tagged potential read access relation. */
__isl_give isl_union_map *pet_scop_get_tagged_may_reads(
	__isl_keep pet_scop *scop);
/* Return the potential write access relation. */
__isl_give isl_union_map *pet_scop_get_may_writes(__isl_keep pet_scop *scop);
/* Return the definite write access relation. */
__isl_give isl_union_map *pet_scop_get_must_writes(__isl_keep pet_scop *scop);
/* Return the tagged potential write access relation. */
__isl_give isl_union_map *pet_scop_get_tagged_may_writes(
	__isl_keep pet_scop *scop);
/* Return the tagged definite write access relation. */
__isl_give isl_union_map *pet_scop_get_tagged_must_writes(
	__isl_keep pet_scop *scop);
/* Return the definite kill access relation. */
__isl_give isl_union_map *pet_scop_get_must_kills(__isl_keep pet_scop *scop);
/* Return the tagged definite kill access relation. */
__isl_give isl_union_map *pet_scop_get_tagged_must_kills(
	__isl_keep pet_scop *scop);